--- a/definition/config_gcc.yaml
+++ b/definition/config_gcc.yaml
@@ -1,18 +1,18 @@
 ---
 configuration_gcc:
-  subscription_id: xxxxxxxx-xxxxxxxx-xxxxxxxx-xxxxxxxx-xxxxxxxx # xxxxxxxx-xxxxxxxx-xxxxxxxx-xxxxxxxx-xxxxxxxx # 
-  spn_name: gcci-spn-landing-zone-001 # dummy value TODO: configure how this spn is being used?
-  # GCC 2.0 compartment information 
-  resource_group_name:	gcci-platform
-  log_analytics_workspace_resource_group_name:	gcci-agency-law
-  log_analytics_workspace_name:	gcci-agency-workspace
-  # virtual network - leave empty if there is no such virtual network   
-  ingress_egress_vnet_name_ingress_internet: UAT-InternetIngressVnet
-  ingress_egress_vnet_name_egress_internet: UAT-InternetEgressVnet
-  ingress_egress_vnet_name_ingress_intranet: UAT-IntranetIngressVnet
-  ingress_egress_vnet_name_egress_intranet: UAT-IntranetEgressVnet
-  internet_vnet_name: gcci-vnet-internet # dummy value
-  management_vnet_name: UAT-ManagementVnet
-  devops_vnet_name: 	UAT-DevOpsVnet
+  subscription_id : xxxxxx-4066-42f0-b0fa-xxxxxxxxxx 
+  spn_name: gcci-spn-landing-zone-001 # TODO: configure how this spn is being used?
+  # GCC 2.0 compartment information     
+  resource_group_name : gcci-platform # gcci-rg-agency-vnets # gcci-platform # name of the agency resource group created by gcc to house the VNet during onboarding
+  log_analytics_workspace_resource_group_name : gcci-rg-agency-law # TODO: name of the agency law resource group created by gcc to house the law during onboarding
+  log_analytics_workspace_name: gcci-law-central-logs # name of the log analytics workspace created by gcc during onboarding
+  # virtual network - leave empty if there is no such virtual network         
+  ingress_egress_vnet_name_ingress_internet: gcci-vnet-ingress-internet
+  ingress_egress_vnet_name_egress_internet: gcci-vnet-egress-internet
+  ingress_egress_vnet_name_ingress_intranet: gcci-vnet-ingress-intranet
+  ingress_egress_vnet_name_egress_intranet: gcci-vnet-egress-intranet
+  internet_vnet_name: gcci-vnet-internet
+  management_vnet_name: gcci-vnet-management
+  devops_vnet_name: gcci-vnet-devops 
 
              
