--- a/definition/Example/config_solution_accelerators.yaml
+++ b/definition/Example/config_solution_accelerators.yaml
@@ -1,52 +1,7 @@
 ---
-# id = "/subscriptions/e22a351f-db36-4a02-9793-0f2189d5f3ab/resourceGroups/ignite-rg-dev-env-re1/providers/Microsoft.Network/virtualNetworks/ignite-vnet-spoke-re1"
-# AzureFirewallSubnet 100.1.0.0/26
-# ApplicationGatewaySubnet 100.1.0.64/26
-# AzureFirewallSubnet_egress 100.1.1.0/26
-# AzureFirewallSubnet_egress_management 100.1.1.64/26
-
-      # cidr_ingress_egress_zone_subnet_ingress_internet: "{{configuration.cidr_ingress_egress_zone_subnet_ingress_internet | trim}}"    
-      # cidr_ingress_egress_zone_subnet_agw_internet: "{{configuration.cidr_ingress_egress_zone_subnet_ingress_agw_internet | trim}}"    
-      # cidr_ingress_egress_zone_subnet_egress_internet: "{{configuration.cidr_ingress_egress_zone_subnet_egress_internet | trim}}" 
-      # cidr_ingress_egress_zone_subnet_egress_mgmt_internet: "{{configuration.cidr_ingress_egress_zone_subnet_egress_mgmt_internet | trim}}" 
-
-      # cidr_ingress_egress_zone_subnet_ingress_intranet: "{{configuration.cidr_ingress_egress_zone_subnet_ingress_intranet | trim}}"    
-      # cidr_ingress_egress_zone_subnet_agw_intranet: "{{configuration.cidr_ingress_egress_zone_subnet_ingress_agw_intranet | trim}}"    
-      # cidr_ingress_egress_zone_subnet_egress_intranet: "{{configuration.cidr_ingress_egress_zone_subnet_egress_intranet | trim}}" 
-      # cidr_ingress_egress_zone_subnet_egress_mgmt_intranet: "{{configuration.cidr_ingress_egress_zone_subnet_egress_mgmt_intranet | trim}}"       
-      
-      # cidr_internet_zone_subnet_app: "{{configuration.cidr_internet_zone_subnet_app | trim}}" 
-      # cidr_internet_zone_subnet_data: "{{configuration.cidr_internet_zone_subnet_data | trim}}" 
-      # cidr_intranet_zone_subnet_app: "{{configuration.cidr_intranet_zone_subnet_app | trim}}" 
-      # cidr_intranet_zone_subnet_data: "{{configuration.cidr_intranet_zone_subnet_data | trim}}" 
-
-      # cidr_management_zone_subnet_infra: "{{configuration.cidr_management_zone_subnet_infra | trim}}" 
-      # cidr_management_zone_subnet_security: "{{configuration.cidr_management_zone_subnet_security | trim}}" 
-      # cidr_management_zone_subnet_bastion: "{{configuration.cidr_management_zone_subnet_bastion | trim}}" 
-      # cidr_devops_zone_subnet_runner: "{{configuration.cidr_devops_zone_subnet_runner | trim}}"  
-
 configuration:
-  # agency_code:  
-  # project_code: esaks
-  # # application team to provide the subnet cidr range - leave empty if there is no such subnet  
-  # # internet ingress
-  # cidr_ingress_egress_zone_subnet_ingress_internet: 100.1.0.0/26 # internet ingress firewall
-  # cidr_ingress_egress_zone_subnet_ingress_agw_internet: 100.1.0.64/26 # internet ingress agw
-  # cidr_ingress_egress_zone_subnet_egress_internet: 100.1.1.0/26   # internet egress firewall
-  # cidr_ingress_egress_zone_subnet_egress_mgmt_internet: 100.1.1.64/26  # internet firewall basic mgmt 
-  # cidr_ingress_egress_zone_subnet_ingress_intranet: 172.17.0.0/24 # internet ingress firewall
-  # cidr_ingress_egress_zone_subnet_ingress_agw_intranet: 172.17.0.0/24 # internet ingress agw
-  # cidr_ingress_egress_zone_subnet_egress_intranet: 172.17.1.0/24  # internet egress firewall
-  # cidr_ingress_egress_zone_subnet_egress_mgmt_intranet: 172.17.1.0/24 # firewall basic mgmt     
-  # cidr_internet_zone_subnet_web: 172.16.1.0/24
-  # cidr_internet_zone_subnet_app: 172.16.1.0/24
-  # cidr_internet_zone_subnet_data: 172.16.2.0/24
-  # cidr_management_zone_subnet_infra: 100.64.0.0/24
-  # cidr_management_zone_subnet_security: 100.64.1.0/24  
-  # cidr_management_zone_subnet_bastion: 100.64.2.0/24
-  # cidr_devops_zone_subnet_runner: 100.65.0.0/24
-  agency_code:  	
-  project_code:	moris
+  agency_code:  	caf
+  project_code:	ignite
   cidr_ingress_egress_zone_subnet_ingress_internet: 	100.1.0.0/26 
   cidr_ingress_egress_zone_subnet_ingress_agw_internet: 	100.1.0.64/26 
   cidr_ingress_egress_zone_subnet_egress_internet: 	100.1.1.0/26   
